--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>CV</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 
@@ -18,7 +19,28 @@
                 <div class="col-md-4 logo"></div>
             </a>
             <div class="col-md-8">
-
+                <div class="row bg-color-name-title">
+                    <div class="heading">
+                        <h1 class="name">Mike Lee</h1>
+                        <h2 class="title">Full Stack Developer</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <ul id="nav" class="list-inline clearfix">
+                        <li class="col-xs-6 col-sm-3 ul-menu-color-home menuitem">
+                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home aria-hidden="true"></i><span>Home</span></a>
+                        </li>
+                        <li class="col-xs-6 col-sm-3 ul-menu-color-resume menuitem">
+                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap aria-hidden="true"></i><span>Resume</span></a>
+                        </li>
+                        <li class="col-xs-6 col-sm-3 ul-menu-color-contact menuitem">
+                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-commenting aria-hidden="true"></i><span>Contact</span></a>
+                        </li>
+                        <li class="col-xs-6 col-sm-3 ul-menu-color-home-download-cv menuitem">
+                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download aria-hidden="true"></i><span>Download CV</span></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
