--- a/index.html
+++ b/index.html
@@ -47,6 +47,45 @@
 
     <section class="container-fluid">
         <div class="row row-table">
+            <div class="col-xs-12 col-sm-12 col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="section-heading uppercase">Personal Info</h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Name:</p>
+                    </div>
+                    <div class="value">
+                        <p>Mike Lee</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Address:</p>
+                    </div>
+                    <div class="value">
+                        <p>99 Madeup Lane, Springfield, London England</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Phone:</p>
+                    </div>
+                    <div class="value">
+                        <p>555 6969 101010</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Email:</p>
+                    </div>
+                    <div class="value">
+                        <p>mike.lee@boomie.com</p>
+                    </div>
+                </div>
+            </div>
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-three-reasons selection-column">
                 <div class="row">
                     <div class="col-md-12">
@@ -62,8 +101,7 @@
                             <div class="col-xs-10 col-sm-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developer with a wealth of diverse 
-                                    life and technical experience that I bring to every project.
+                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
                                 </p>
                             </div>
                         </div>
@@ -76,8 +114,7 @@
                             <div class="col-xs-10 col-sm-10">
                                 <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developer with a wealth of diverse 
-                                    life and technical experience that I bring to every project.
+                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
                                 </p>
                             </div>
                         </div>
@@ -90,9 +127,7 @@
                             <div class="col-xs-10 col-sm-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working across the stack.
-                                    I'm an excellent communicator who thrives in bright and enthusiaastic teams and 
-                                    I'm also a self starter when working solo.
+                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in bright and enthusiaastic teams and I'm also a self starter when working solo.
                                 </p>
                             </div>
                         </div>
