--- a/resume.html
+++ b/resume.html
@@ -34,10 +34,10 @@
                             <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap aria-hidden="true"></i><span>Resume</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ul-menu-color-contact menuitem">
-                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-commenting aria-hidden="true"></i><span>Contact</span></a>
+                            <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-commenting aria-hidden="true"></i><span>Contact</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ul-menu-color-home-download-cv menuitem">
-                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download aria-hidden="true"></i><span>Download CV</span></a>
+                            <a href="assets/cv/cv-pdf.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download aria-hidden="true"></i><span>Download CV</span></a>
                         </li>
                     </ul>
                 </div>
@@ -154,7 +154,7 @@
                 <h5 class="uppercase general-sub">Download my CV</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here
-                    <a href="#" class="cv-pdf"><i class="fa fa-download" aria-hidden="true"></i></a>
+                    <a href="assets/cv/cv-pdf.pdf" target="_blank" class="cv-pdf"><i class="fa fa-download" aria-hidden="true"></i></a>
                 </p>
             </div>
             <div class="col-sm-4">
